wordpress-test/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: database        
          image: ghcr.io/kacper08480/mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-data
              mountPath: /var/lib/mysql
      volumes:
        - name: database-data
          persistentVolumeClaim:
            claimName: database-pvc
