wordpress-test/wp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
      containers:
        - name: wordpress
          image: image: bitnami/wordpress:6.5.4-debian-11-r6
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-storage
              mountPath: /bitnami/wordpress/wp-content
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: wordpress-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
        - name: tmp
          emptyDir: {}
