wordpress-test/wp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress-route
spec:
  to:
    kind: Service
    name: wordpress-service
  port:
    targetPort: 8080
